# marshmallow-generic

./: .gitignore  404.html  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yaml
.github/workflows/: ci.yaml
api_reference/decorators/: index.html
api_reference/schema/: index.html
docs/: index.md
docs/api_reference/: decorators.md  schema.md
requirements/: common.txt  dev.txt
scripts/: ci.sh  cov.sh  lint.sh  test.sh  typecheck.sh  util.sh
search/: search_index.json
src/marshmallow_generic/: __init__.py  _util.py  decorators.py  schema.py
tests/: __main__.py  test__util.py  test_decorators.py  test_end2end.py  test_schema.py
