#####################
# Python packaging: #

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "marshmallow-generic"
description = "Generic schema with full typing support and minimal boilerplate"
authors = [
    { name = "Daniil Fajnberg", email = "mail@daniil.fajnberg.de" },
]
maintainers = [
    { name = "Daniil Fajnberg", email = "mail@daniil.fajnberg.de" },
]
requires-python = ">=3.10, <4.0"
keywords = [

]
license = { text = "Apache Software License Version 2.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
dynamic = [
    "dependencies",
    "readme",
    "version",
]

[project.optional-dependencies]
dev = [
    "black==26.1.0",
    "build==1.4.0",
    "coverage[toml]==7.13.3",
    "isort==7.0.0",
    "mkdocs-material==9.7.1",
    "mkdocstrings[python]==1.0.2",
    "mypy==1.19.1",
    "ruff==0.15.0",
]

[project.urls]
"Repository" = "https://github.com/daniil-berg/marshmallow-generic"
"Issue Tracker" = "https://github.com/daniil-berg/marshmallow-generic/issues"
"Documentation" = "http://daniil-berg.github.io/marshmallow-generic"

[tool.setuptools.dynamic]
dependencies = { file = "requirements/common.txt" }
readme = { file = ["README.md"], content-type = "text/markdown" }
version = { attr = "marshmallow_generic.__version__" }

#########################
# Static type checking: #

[tool.mypy]
cache_dir = ".cache/mypy"
files = [
    "src/",
    "tests/",
]
warn_unused_configs = true
strict = true
show_error_codes = true
plugins = [

]

#######################
# Unit test coverage: #

[tool.coverage.run]
data_file = ".cache/coverage"
source = [
    "src/",
]
branch = true
command_line = "-m tests"
omit = [
    ".venv*/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "if TYPE_CHECKING:",
    '''if __name__ == ['"]__main__['"]:''',
    "@overload",
]
omit = [
    "tests/*",
]

###############################
# Linting and style checking: #

[tool.ruff]
cache-dir = ".cache/ruff"
select = [
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "N",    # pep8-naming
    "D",    # pydocstyle
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit
    "FBT",  # flake8-boolean-trap
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C",    # flake8-comprehensions
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TD",   # flake8-todos
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PL",   # pylint
    "TRY",  # tryceratops
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # Line too long -> handled by black
    "D203",   # 1 blank line required before class docstring -> D211 is better
    "D212",   # Multi-line docstring summary should start at the first line -> ugly, D213 is better
    "D401",   # First line of docstring should be in imperative mood -> no, it shouldn't
    "D407",   # Missing dashed underline after section -> different docstring style
    "ANN101", # Missing type annotation for self in method -> unnecessary
    "ANN102", # Missing type annotation for cls in classmethod -> unnecessary
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed -> we'll use it sparingly
]

[tool.ruff.per-file-ignores]
"src/**/__init__.py" = [
    "A001", # Variable {name} is shadowing a Python builtin
    "D104", # Missing docstring in public package
    "F401", # {...} imported but unused
]
"tests/*.py" = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D104", # Missing docstring in public package
]

###################
# Import sorting: #

[tool.isort]
profile = "black"
extra_standard_library = ["typing_extensions"]
