#####################
# Python packaging: #

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marshmallow-generic"
description = "Generic schema with full typing support and minimal boilerplate"
readme = "README.md"
authors = [
    { name = "Daniel Fainberg", email = "mail@daniel.fainberg.net" },
]
maintainers = [
    { name = "Daniel Fainberg", email = "mail@daniel.fainberg.net" },
]
requires-python = ">=3.10, <4.0"
keywords = [
    "generic",
    "marshmallow",
    "schema",
    "validation",
    "deserialization",
    "serialization",
]
license = { text = "Apache Software License Version 2.0" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "marshmallow>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "build==1.4.0",
    "coverage[toml]==7.13.4",
    "mkdocs-material==9.7.4",
    "mkdocstrings[python]==1.0.3",
    "mypy==1.19.1",
    "ruff==0.15.4",
]

[project.urls]
"Repository" = "https://github.com/daniil-berg/marshmallow-generic"
"Issue Tracker" = "https://github.com/daniil-berg/marshmallow-generic/issues"
"Documentation" = "http://daniil-berg.github.io/marshmallow-generic"

[tool.hatch.version]
path = "src/marshmallow_generic/__init__.py"


#########################
# Virtual environments: #

[tool.hatch.envs.default]
installer = "uv"
extra-dependencies = []
features = [
  "dev",
]

[[tool.hatch.envs.default.matrix]]
python = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.hatch.envs.default.scripts]
cache-clear = "rm -rf .cache/"
check = "ruff check {args:src/ tests/}"
ci = [
    "check",
    "format-diff",
    "types",
    "test",
]
fix = "check --fix"
format = "ruff format {args:src/ tests/}"
format-diff = "format --diff"
test = "scripts/test.sh"
types = "mypy {args:src/ tests/}"

[tool.hatch.envs.hatch-static-analysis]
config-path = "none"  # explicitly use custom ruff config below

[tool.hatch.envs.hatch-static-analysis.scripts]
# The following are essentially duplicates of the `check`, `fix`, `format`, and `format-diff` scripts
# from the default environment defined above.
# They serve as a convenient shortcut via the built in `hatch fmt` command.
format-check = "format-fix --diff"
format-fix = "ruff format {args:src/ tests/}"
lint-check = "ruff check {args:src/ tests/}"
lint-fix = "lint-check --fix"


#########################
# Static type checking: #

[tool.mypy]
cache_dir = ".cache/mypy"
files = [
    "src/",
    "tests/",
]
warn_unused_configs = true
strict = true
show_error_codes = true
plugins = [

]


#######################
# Unit test coverage: #

[tool.coverage.run]
data_file = ".cache/coverage"
source = [
    "src/",
]
branch = true
command_line = "-m tests"
omit = [
    ".venv*/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "if TYPE_CHECKING:",
    '''if __name__ == ['"]__main__['"]:''',
    "@overload",
]
omit = [
    "tests/*",
]


###############################
# Linting and style checking: #

[tool.ruff]
cache-dir = ".cache/ruff"
line-length = 80

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "N",    # pep8-naming
    "D",    # pydocstyle
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit
    "FBT",  # flake8-boolean-trap
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C",    # flake8-comprehensions
    "PIE",  # flake8-pie
    "T20",  # flake8-print
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TD",   # flake8-todos
    "TCH",  # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate
    "PL",   # pylint
    "TRY",  # tryceratops
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # Line too long -> handled by black
    "D203",   # 1 blank line required before class docstring -> D211 is better
    "D212",   # Multi-line docstring summary should start at the first line -> ugly, D213 is better
    "D401",   # First line of docstring should be in imperative mood -> no, it shouldn't
    "D407",   # Missing dashed underline after section -> different docstring style
    "ANN401", # Dynamically typed expressions (typing.Any) are disallowed -> we'll use it sparingly
]

[tool.ruff.lint.per-file-ignores]
"src/**/__init__.py" = [
    "A001", # Variable {name} is shadowing a Python builtin
    "D104", # Missing docstring in public package
    "F401", # {...} imported but unused
]
"tests/*.py" = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D104", # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"
